<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="412dp"
        android:layout_height="49dp"
        android:background="@color/material_dynamic_neutral30"
        android:gravity="center|center_horizontal"
        android:text="@string/txtTitulo"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/playerName"
        android:layout_width="332dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/escribe_tu_nombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@color/material_dynamic_neutral70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.086" />

    <Button
        android:id="@+id/starButton"
        android:layout_width="229dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:text="@string/btnStart"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerName" />

</androidx.constraintlayout.widget.ConstraintLayout>