<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WinnerFragment" >

    <TextView
        android:id="@+id/txtTitleLoser"
        android:layout_width="412dp"
        android:layout_height="49dp"
        android:background="@color/material_dynamic_neutral30"
        android:gravity="center|center_horizontal"
        android:text="@string/txtWinnerTitle"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtLoserMessage"
        android:layout_width="385dp"
        android:layout_height="65dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/winnerMessage"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleLoser"
        app:layout_constraintVertical_bias="0.168" />

    <Button
        android:id="@+id/btnWinnerAgain"
        android:layout_width="290dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:text="@string/btnTryAgain"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoserMessage"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>